cmake_minimum_required(VERSION 3.14)
project(CButy)

set(CMAKE_CXX_STANDARD 14)

add_executable(CButy main.cpp arithmetic.cpp produce_flow_if_switch.cpp produce_flow_round.cpp produce_flow_break.cpp function_array.cpp function_function.cpp codefile/functionfiloe.cpp headerfile/functionfiloe.h hand.cpp struct_main.cpp address_book.cpp memory_model.cpp)